--- a/_config.yml
+++ b/_config.yml
@@ -53,3 +53,11 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 remote_theme: zivong/ockham
+jekyll_admin:
+  hidden_links:
+    - posts
+    - pages
+    - staticfiles
+    - datafiles
+    - configuration
+  homepage: "pages"
